syntax = "proto3";

package cart;

option go_package = "github.com/RakhatLukum/CodeMart/cart-service/proto";

import "google/protobuf/empty.proto";

message Cart {
  int32 id = 1;
  int32 user_id = 2;
  int32 product_id = 3;
}

message Product {
  int32 id = 1;
  string name = 2;
  double price = 3;
  string tags = 4;
}

message CreateCartRequest {
  int32 user_id = 1;
  int32 product_id = 2;
}

message CreateCartResponse {
  int32 id = 1;
  int32 user_id = 2;
  int32 product_id = 3;
}

message DeleteCartItemRequest {
  int32 user_id = 1;
  int32 product_id = 2;
}

message DeleteCartItemResponse {
  bool deleted = 1;
}

message UserIDRequest {
  int32 user_id = 1;
}

message CartListResponse {
  repeated Cart carts = 1;
}

message CartItemsResponse {
  repeated Product items = 1;
}

message UpdateCartItemRequest {
  int32 id = 1;
  int32 user_id = 2;
  int32 product_id = 3;
}

message HasProductInCartRequest {
  int32 user_id = 1;
  int32 product_id = 2;
}

message HasProductInCartResponse {
  bool has_product = 1;
}

message CartItemCountResponse {
  int32 count = 1;
}

message CartTotalPriceResponse {
  double total_price = 1;
}

message SendCartSummaryEmailRequest {
  string to_email = 1;
  string to_name = 2;
  int32 user_id = 3;
}

message EmailStatusResponse {
  bool sent = 1;
  string message = 2;
}

message CacheResponse {
  bool success = 1;
  string message = 2;
}

service CartService {
  rpc AddToCart(CreateCartRequest) returns (CreateCartResponse);
  rpc RemoveFromCart(DeleteCartItemRequest) returns (DeleteCartItemResponse);
  rpc ClearCart(UserIDRequest) returns (google.protobuf.Empty);
  rpc GetCart(UserIDRequest) returns (CartListResponse);
  rpc GetCartItems(UserIDRequest) returns (CartItemsResponse);
  rpc UpdateCartItem(UpdateCartItemRequest) returns (google.protobuf.Empty);
  rpc HasProductInCart(HasProductInCartRequest) returns (HasProductInCartResponse);
  rpc GetCartItemCount(UserIDRequest) returns (CartItemCountResponse);
  rpc GetCartTotalPrice(UserIDRequest) returns (CartTotalPriceResponse);
  rpc SendCartSummaryEmail(SendCartSummaryEmailRequest) returns (EmailStatusResponse);
  rpc InvalidateCartCache(UserIDRequest) returns (CacheResponse);
  rpc GetAllFromRedis(google.protobuf.Empty) returns (CartListResponse);
  rpc GetAllFromCache(google.protobuf.Empty) returns (CartListResponse);
}